Fix bug that was causing the product images to overflow and reduce size of product tags to small

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -96,6 +96,10 @@ footer {
   margin-top: 9em;
 }
 
+.product-list-card-img {
+  max-width: 100%;
+}
+
 
 /*==========================*\
  *MEDIA QUERIES*
